# emailbot

./: .gitignore  Quickstart  README.md  main.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.agents/rules/: assistant.md
assistant/: PERSONALITY.md  app.py  models.py  skills.py  template.html
docs/: index.html
tests/: conftest.py
tests/unit/: test_handler.py
